# codac

./: .gitignore  CMakeLists.txt  README.md
python/: CMakeLists.txt  setup.py.in
python/codac/core/: __init__.py
python/src/: codac2_py_matlab.h
python/src/core/: CMakeLists.txt  codac2_py_cast.h  codac2_py_core.cpp
python/src/core/actions/: codac2_py_OctaSym.cpp
python/src/core/contractors/: codac2_py_Ctc.cpp  codac2_py_CtcCartProd.cpp  codac2_py_CtcConstell.cpp  codac2_py_CtcCross.cpp  codac2_py_CtcDeriv.cpp  codac2_py_CtcDist.cpp  codac2_py_CtcEval.cpp  codac2_py_CtcInnerOuter.cpp  codac2_py_CtcInter.cpp  codac2_py_CtcInverse.h  codac2_py_CtcInverseNotIn.h  codac2_py_CtcPointCloud.cpp  codac2_py_CtcPolar.cpp  codac2_py_CtcPolytope.cpp  codac2_py_CtcProj.cpp  codac2_py_CtcQInter.cpp  codac2_py_CtcSegment.cpp  codac2_py_CtcUnion.cpp  codac2_py_CtcWrapper.cpp
python/src/core/domains/: codac2_py_BoolInterval.cpp
python/src/core/geometry/: codac2_py_ConvexPolygon.cpp  codac2_py_Edge.cpp  codac2_py_Polygon.cpp  codac2_py_Segment.cpp  codac2_py_geometry.cpp
python/src/core/matrices/: codac2_py_GaussJordan.cpp  codac2_py_IntFullPivLU.cpp  codac2_py_IntvFullPivLU.cpp  codac2_py_Matrix.cpp  codac2_py_MatrixBase.h  codac2_py_Row.cpp  codac2_py_Vector.cpp  codac2_py_VectorBase.h  codac2_py_cart_prod.cpp  codac2_py_hull.cpp  codac2_py_inversion.cpp
python/src/core/operators/: codac2_py_operators.cpp
python/src/core/paver/: codac2_py_pave.cpp
python/src/core/peibos/: codac2_py_peibos.cpp
python/src/core/proj/: codac2_py_qinter.cpp
python/src/core/separators/: codac2_py_Sep.cpp  codac2_py_SepCartPolar.cpp  codac2_py_SepCartProd.cpp  codac2_py_SepChi.cpp  codac2_py_SepCross.cpp  codac2_py_SepInter.cpp  codac2_py_SepInverse.cpp  codac2_py_SepInverse.h  codac2_py_SepPolytope.cpp  codac2_py_SepProj.cpp  codac2_py_SepQInter.cpp  codac2_py_SepTransform.cpp  codac2_py_SepUnion.cpp  codac2_py_SepWrapper.cpp
python/src/core/tools/: codac2_py_Approx.cpp  codac2_py_RobotSimulator.cpp  codac2_py_serialization.cpp  codac2_py_transformations.cpp  codac2_py_trunc.cpp
python/src/core/trajectory/: codac2_py_AnalyticTraj.cpp  codac2_py_AnalyticTrajectory.cpp  codac2_py_SampledTraj.cpp  codac2_py_SampledTrajectory.cpp  codac2_py_TrajBase.h  codac2_py_TrajectoryBase.h
python/src/graphics/: CMakeLists.txt  codac2_py_graphics.cpp
python/src/graphics/figures/: codac2_py_Figure2D.cpp  codac2_py_Figure3D.cpp
python/src/graphics/paver/: codac2_py_drawwhilepaving.cpp
python/src/graphics/styles/: codac2_py_Color.cpp  codac2_py_ColorMap.cpp  codac2_py_PavingStyle.cpp  codac2_py_StyleGradientProperties.cpp  codac2_py_StyleProperties.cpp
python/src/unsupported/: codac2_py_unsupported.cpp
src/extensions/capd/: CMakeLists.txt  codac2_SolutionCurveWrapper.cpp  codac2_SolutionCurveWrapper.h  codac2_capd.cpp  codac2_capd.h  codac2_peibos_capd.cpp  codac2_peibos_capd.h
src/extensions/clp/: CMakeLists.txt  codac-polytope.h  codac2_Polytope_clp.cpp  codac2_Polytope_clp.h  codac2_clp.cpp  codac2_clp.h
src/extensions/ibex/: CMakeLists.txt  codac2_ibex.cpp  codac2_ibex.h
src/extensions/peibos-capd/: CMakeLists.txt  codac2_peibos_capd.cpp  codac2_peibos_capd.h
src/extensions/polytope/: CMakeLists.txt  codac2_Facet.cpp  codac2_Facet.h  codac2_Polytope.cpp  codac2_Polytope.h  codac2_Polytope_dd.cpp  codac2_Polytope_dd.h  codac2_Polytope_util.cpp  codac2_Polytope_util.h  codac2_dd.cpp  codac2_dd.h
src/extensions/polytope/clp/: codac2_clp.cpp  codac2_clp.h
tests/: CMakeLists.txt
tests/core/: tests_codac2_tubes.cpp
tests/core/actions/: codac2_tests_OctaSym.cpp
tests/core/contractors/: codac2_tests_CtcAction.cpp  codac2_tests_CtcCartProd.cpp  codac2_tests_CtcCtcBoundary.cpp  codac2_tests_CtcDeriv.cpp  codac2_tests_CtcDeriv.py  codac2_tests_CtcEval.cpp  codac2_tests_CtcEval.py  codac2_tests_CtcInter.cpp  codac2_tests_CtcInverse.cpp  codac2_tests_CtcInverse.py  codac2_tests_CtcInverseNotIn.cpp  codac2_tests_CtcPolygon.cpp  codac2_tests_CtcPolytope.cpp  codac2_tests_CtcPolytope.py
tests/core/domains/: codac2_tests_BoolInterval.cpp
tests/core/domains/interval/: codac2_tests_Interval.cpp  codac2_tests_Interval.py  codac2_tests_IntervalMatrix.cpp  codac2_tests_IntervalVector.cpp  codac2_tests_Interval_bwd.cpp  codac2_tests_Interval_operations.cpp
tests/core/domains/polytope/: codac2_tests_Parallelepiped.cpp  codac2_tests_Parallelepiped.py  codac2_tests_Polytope.cpp  codac2_tests_Polytope.py
tests/core/geometry/: codac2_tests_ConvexPolygon.cpp  codac2_tests_ConvexPolygon.py  codac2_tests_Edge.cpp  codac2_tests_Edge.py  codac2_tests_Polygon.cpp  codac2_tests_Polygon.py  codac2_tests_Segment.cpp  codac2_tests_Segment.py  codac2_tests_geometry.cpp  codac2_tests_geometry.py  old__tests_polygons.cpp
tests/core/matrices/: codac2_tests_GaussJordan.cpp  codac2_tests_IntFullPivLU.cpp  codac2_tests_IntFullPivLU.py  codac2_tests_IntLDLT.cpp  codac2_tests_Matrix.cpp  codac2_tests_cart_prod.cpp  codac2_tests_hull.cpp  codac2_tests_inversion.cpp
tests/core/operators/: codac2_tests_operators.cpp  codac2_tests_operators.py
tests/core/peibos/: codac2_tests_peibos.cpp  codac2_tests_peibos.py
tests/core/separators/: codac2_tests_SepCartProd.cpp  codac2_tests_SepCtcBoundary.cpp  codac2_tests_SepInverse.cpp  codac2_tests_SepPolygon.cpp  codac2_tests_SepPolygon.py  codac2_tests_SepPolytope.cpp  codac2_tests_SepPolytope.py  codac2_tests_SepProj.cpp  codac2_tests_SepTransform.cpp
tests/core/tools/: codac2_tests_serialization.cpp  codac2_tests_serialization.py  codac2_tests_transformations.cpp  codac2_tests_transformations.py  codac2_tests_trunc.cpp
tests/core/trajectory/: codac2_tests_AnalyticTraj.cpp  codac2_tests_AnalyticTrajectory.cpp  codac2_tests_AnalyticTrajectory.py  codac2_tests_SampledTraj.cpp  codac2_tests_SampledTraj.py  codac2_tests_SampledTrajectory.cpp  codac2_tests_SampledTrajectory.py
tests/extensions/capd/: codac2_tests_capd.cpp
tests/extensions/ibex/: codac2_tests_ibex.cpp
tests/extensions/polytope/: codac2_tests_clp.cpp
tests/test_codac/: CMakeLists.txt  main.cpp
(+545 files in other folders)
