# ==================================================================
#  Codac - cmake configuration file
# ==================================================================

list(APPEND CODAC_CLP_SRC
    
  ${CMAKE_CURRENT_SOURCE_DIR}/codac2_clp.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/codac2_clp.h
  ${CMAKE_CURRENT_SOURCE_DIR}/codac2_Polytope_clp.h
  ${CMAKE_CURRENT_SOURCE_DIR}/codac2_Polytope_clp.cpp
)

################################################################################
# Create the target for libcodac-clp
################################################################################

  #if(NOT CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 20)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
  #endif()

  add_library(${PROJECT_NAME}-clp ${CODAC_CLP_SRC})
  target_include_directories(${PROJECT_NAME}-clp PUBLIC
    ${CLP_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}
  )
  target_link_libraries(${PROJECT_NAME}-clp PUBLIC ${PROJECT_NAME}-core Eigen3::Eigen ${CLP_LIBRARIES})


  ################################################################################
  # For the generation of the PKG file
  ################################################################################

  set(CODAC_PKG_CONFIG_CFLAGS "${CODAC_PKG_CONFIG_CFLAGS} -I\${includedir}/${PROJECT_NAME}-clp" PARENT_SCOPE)
  set(CODAC_PKG_CONFIG_LIBS "${CODAC_PKG_CONFIG_LIBS} -l${PROJECT_NAME}-clp" PARENT_SCOPE)


  ################################################################################
  # Installation of libcodac-clp files
  ################################################################################

  # Getting header files from sources

  foreach(srcfile ${CODAC_CLP_SRC})
    if(srcfile MATCHES "\\.h$" OR srcfile MATCHES "\\.hpp$")
      list(APPEND CODAC_CLP_HDR ${srcfile})
      file(COPY ${srcfile} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../../include)
    endif()
  endforeach()

  # Generating the file codac-clp.h

  set(CODAC_CLP_MAIN_HEADER ${CMAKE_CURRENT_BINARY_DIR}/codac-clp.h)
  file(WRITE ${CODAC_CLP_MAIN_HEADER} "/* This file is generated by CMake */\n\n")
  file(APPEND ${CODAC_CLP_MAIN_HEADER} "#pragma once\n\n")
  foreach(header_path ${CODAC_CLP_HDR})
    get_filename_component(header_name ${header_path} NAME)
    file(APPEND ${CODAC_CLP_MAIN_HEADER} "#include <${header_name}>\n")
  endforeach()
  file(COPY ${CODAC_CLP_MAIN_HEADER} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../../include)

  # Install files in system directories

  install(TARGETS ${PROJECT_NAME}-clp DESTINATION ${CMAKE_INSTALL_LIBDIR})
  install(FILES ${CODAC_CLP_HDR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}-clp)
  install(FILES ${CODAC_CLP_MAIN_HEADER} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}-clp)
